Version 5.9.27
- Added some more missing functions from libc
- Added some additional asm optimizations thanks to Ada
- Fixed an out of memory crash due to nested structs in -O0
- Fixed assembly warnings that were accidentally broken
- Made more fatfs options settable on the command line (thanks, Ada)
- Optimized the 9p filesystem code somewhat

Version 5.9.26
- Added __FLEX_MAJOR__, __FLEX_MINOR__, and __FLEX_REV__ macros
- Added __asm__ alias for __asm in C
- Fixed a bug when __builtin_clz was applied to memory
- Improved performance of symbol resolution in sub-modules (some complicated code was so slow it seemed to hang)

Version 5.9.25
- Added __P1__ macro defined only for P1 compiles
- Added UMOUNT command for BASIC
- Added an `inline` attribute to encourage functions to be inlined
- Added _cogstart_cog and related defines to propeller2.h
- Added a new file libc.spin2 to make calling the C library easier from Spin2
- Fixed ALIGNL in Spin2 VAR blocks
- Improved some error messages
- Made heap corruption code check depend on -g flag
- Made sure variables are properly aligned in Spin2 for P1
- Tweaked file names in zip files to be compatible with more unzippers

Version 5.9.24
- Added --zip flag to create archive of source files
- Allowed __fromfile inside classes, and fixed symbol resolution for this case
- Fixed using local constants for default parameters in methods
- Fixed a compiler bug affecting fscanf
- Handled some more bitfield expressions in nucode & bytecode output
- Improved output of -f, and added #include'd files to that output
- Implemented ungetc function

Version 5.9.23
- Enable DEBUG in inline assembly if -gbrk is active
- Fixed .lbl+n expressions in inline assembly
- Fixed Spin2 loops so that the correct value is in the variable if the loop is quit
- Fixed Nucode evaluation of some bit operations
- Fixed a crash when duplicate names declared in anonymous structs